<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentBasic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button8"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button9"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/nine" />

        <Button
            android:id="@+id/buttonMul"
            style="@style/buttonActionFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_action_design"
            android:text="@string/multiply"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/four" />

        <Button
            android:id="@+id/button5"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/six" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/buttonActionFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_action_design"
            android:text="@string/minus"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:longClickable="true"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:longClickable="true"
            android:text="@string/three" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/buttonActionFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_action_design"
            android:text="@string/plus"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClear"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_action_design"
            android:fontFamily="cursive"
            android:text="@string/clrscr" />

        <Button
            android:id="@+id/button0"
            style="@style/buttonFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:fontFamily="cursive"
            android:text="@string/zero" />

        <Button
            android:id="@+id/buttonDot"
            style="@style/buttonActionFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_num_design"
            android:text="@string/dot"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonEquals"
            style="@style/buttonActionFont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_action_design"
            android:text="@string/equals"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>